deployment/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: health-check-service
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: health-check-service
    spec:
      containers:
        - name: health-check-service
          image: us.gcr.io/test-kubernetes-182712/hello-world-service
          ports:
            - containerPort: 8080
              name: http
