deployment/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-service
  labels:
    app: hello-world-service
spec:
  ports:
    - port: 8080
      targetPort: 8080
      name: http
  selector:
    app: hello-world-service
  type: LoadBalancer
