deployment/prod-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-world-service
spec:
  rules:
  - host: prod-hello-world-service.api.cicd.siriuscloudservices.com
    http:
      paths:
      - backend:
          serviceName: hello-world-service
          servicePort: 8080
